# qmwidgets

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  QmWidgets.sln  README.md
QmWidgets/: .gitignore  QmWidgets.aps  QmWidgets.vcxproj  QmWidgets.vcxproj.filters  icons.qrc  qmanalogclock.cpp  qmanalogclock.h  qmanalogclockplugin.cpp  qmanalogclockplugin.h  qmcirclelight.cpp  qmcirclelight.h  qmcirclelightplugin.cpp  qmcirclelightplugin.h  qmgaugecar.cpp  qmgaugecar.h  qmgaugecarplugin.cpp  qmgaugecarplugin.h  qmimageanalogclock.cpp  qmimageanalogclock.h  qmimageanalogclockplugin.cpp  qmimageanalogclockplugin.h  qmlogindialog.cpp  qmlogindialog.h  qmlogindialog.ui  qmswitch.cpp  qmswitch.h  qmswitchplugin.cpp  qmswitchplugin.h  qmthermometer.cpp  qmthermometer.h  qmthermometerplugin.cpp  qmthermometerplugin.h  qmwidgets.cpp  qmwidgets.h  qmwidgets_global.h  stdafx.h
QmWidgetsTest/: .gitignore  QmWidgetsTest.aps  QmWidgetsTest.rc  QmWidgetsTest.vcxproj  QmWidgetsTest.vcxproj.filters  mainwindow.cpp  mainwindow.h  mainwindow.ui
cmake/: qmwidgetsConfig.cmake.in
source/: CMakeLists.txt  qmanalogclock.cpp  qmanalogclock.h  qmasyncblockerwidget.cpp  qmasyncblockerwidget.h  qmautoreturnslider.cpp  qmblinklabel.h  qmcirclelight.cpp  qmframelessdialog.cpp  qmframelessdialog.h  qmframelesswindow.cpp  qmframelesswindow.h  qmimageanalogclock.cpp  qmimagebutton.cpp  qmimageshadowwidget.cpp  qmimageshadowwidget.h  qmlogindialog.cpp  qmlogindialog.ui  qmninepatchpixmap.cpp  qmninepatchpixmap.h  qmqrcodeview.cpp  qmshadowframe.cpp  qmshadowframe.h  qmshadowhelperwidget.cpp  qmshadowhelperwidget.h  qmswitch.cpp  qmswitch.h  qmthermometer.cpp  qmtitlecontainer.h  qmwidgets_config.h.in  stdafx.h
source/plugins/: CMakeLists.txt  qmanalogclockplugin.h  qmcirclelightplugin.cpp  qmcrossbuttonplugin.cpp  qmcrossbuttonplugin.h  qmgaugecarplugin.cpp  qmgaugecarplugin.h  qmimageanalogclockplugin.h  qmqrcodeviewplugin.h  qmswitchplugin.h  qmthermometerplugin.h  qmtitlecontainerplugin.h  qmwidgets.h
src/: CMakeLists.txt  qmanalogclock.cpp  qmassets.qrc  qmasyncblockerwidget.h  qmautoreturnslider.cpp  qmautoreturnslider.h  qmblinklabel.cpp  qmcirclelight.h  qmcirclestatus.cpp  qmcirclestatus.h  qmcollapsiblewidget.cpp  qmcollapsiblewidget.h  qmcrossbutton.cpp  qmcrossbutton.h  qmdynamicmessage.cpp  qmdynamicmessage.h  qmframelesswindow.cpp  qmframelesswindow.h  qmgaugecar.cpp  qmgaugecar.h  qmgradientseparator.cpp  qmgradientseparator.h  qmhardwareinfo.h  qmhardwareinfo_win.cpp  qmimageanalogclock.cpp  qmimageanalogclock.h  qmimagebutton.cpp  qmimagebutton.h  qmimageslider.cpp  qmimageslider.h  qmlogindialog.h  qmlogindialog.ui  qmninepatchpixmap.cpp  qmninepatchpixmap.h  qmqrcodeview.cpp  qmqrcodeview.h  qmshadowhelperwidget.cpp  qmshadowhelperwidget.h  qmswitch.cpp  qmswitch.h  (+5 more)
src/plugins/: CMakeLists.txt  qmanalogclockplugin.cpp  qmcirclelightplugin.h  qmimageanalogclockplugin.cpp  qmimagesliderplugin.cpp  qmimagesliderplugin.h  qmqrcodeviewplugin.cpp  qmswitchplugin.cpp  qmthermometerplugin.cpp  qmtitlecontainerplugin.cpp  qmwidgets.cpp
tests/: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
